--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -53,10 +53,10 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Build with dotnet
-        run: dotnet build API/API.csproj --configuration Release
+        run: dotnet build DatingApp/API/API.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish API/ -c Release
+        run: dotnet publish DatingApp/API/ -c Release
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
