--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: API/bin/Release/net9.0/publish
+          path: DatingApp/API/bin/Release/net9.0/publish
 
   deploy:
     permissions:
